# pacepals

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/pacepals/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
backend/: Cargo.toml  backend.md
backend/src/: debug.rs  main.rs  net.rs
backend/src/api/: auth.rs  config.rs  friends.rs  mod.rs  schedule.rs
ios/: Info.plist
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: globals.dart  location.dart  main.dart
lib/Screens/: BottomNavbar.dart  BottomNavbar1.dart  CommunityScreen.dart  GetPermissionsScreen.dart  HomeScreen.dart  LoginScreen.dart  QRScanner.dart  RunScreen.dart  SettingScreen.dart  SignInScreen.dart  SignUpScreen.dart
lib/Widgets/: BottomNavbar.dart  Navbar.dart  StaticMaps.dart
lib/api/: auth.dart  def.dart  signup.dart
lib/api/cfg/: def.dart  get.dart  set_private.dart  set_public.dart
lib/api/fr/: add.dart  get.dart  lookup.dart
lib/api/login/: auth.dart  signup.dart
lib/api/sch/: suggest.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
