[package]
name = "pacepals-961"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
axum = "0.6.12"
shuttle-axum = "0.13.0"
tokio = "1.27.0"
sha256 = "1.1.2"
uuid = "1.3.0"
serde = "1.0.159"
